--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.6.8",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
